--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <title>Contact Me</title>
 </head>
 <body>
-    <h1>Contact details</h1>
+    <h1>MY Contact details</h1>
     <ul>
         <li>Contact no. 9399921961</li>
         <li>Address : Kashyap colony Bilaspur Chattisgarh</li>
